--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -137,6 +137,7 @@
   "Event #": "活动#",
   "Exchange Rates": "汇率",
   "Ex-Client": "前客户",
+  "Export": "导出",
   "File": "文件",
   "File(s)": "文件",
   "First Name": "名",
@@ -278,6 +279,7 @@
   "Rebate": "返佣",
   "Rebate Management": "返佣管理",
   "Rebate Report": "返佣明细",
+  "Recent Withdrawal History": "近期出金历史",
   "Remove": "移除",
   "Reopen Job": "重新建立工作",
   "Reset Password": "密码重置",
@@ -367,7 +369,7 @@
   "Withdraw": "出金",
   "Withdrawal": "出金",
   "Work Group": "工作组",
-  "Work Group Import": "工作组批量上传",
+  "Work Group Import / Export": "工作组导入导出",
   "Work Group Permission": "工作组权限设置",
   "Work Groups": "工作组",
   "Work Note": "工作便签",
@@ -384,8 +386,6 @@
   "Amount should not be 0.": "金额不能为零",
   "Commission weight is required.": "请输入外佣金额",
   "Commission weight should not be negative.": "外佣不可以为负数",
-  "Commission weight weight should not be greater than 100.": "外佣分配比例之和不能超过100%",
-  "Commission weight weight should not be negative.": "外佣分配比例不可以为负数",
   "Currencies are different between the accounts.": "账户的币种不同",
   "Day is required.": "日期不能为空",
   "Email already exists.": "此邮箱已经存在",
@@ -410,12 +410,9 @@
   "No work group data is found in the file.": "无法找到组别信息",
   "Old password is incorrect.": "当前密码不正确",
   "Portal weight is required.": "请填写点佣金额",
-  "Portal weight should not be greater than 100.": "点佣之和不能超过100",
   "Portal weight should not be negative.": "点佣不可为负数",
   "Record already exits.": "记录已存在",
   "Scheduled job does not exist any more.": "计划任务不存在",
-  "Sum of commission weight should be equal to 100.": "外佣分配比例之和必须为100%",
-  "Sum of portal weight should be equal to 100.": "点佣分配比例之和必须为100%",
   "Symbol already exits.": "产品名称已存在",
   "The account does not exist.": "账户不存在",
   "The account has been disabled.": "账户已被冻结",
@@ -423,8 +420,6 @@
   "There are multiple clients with the same login.": "存在多个同名账户共用一个登录账号",
   "There are work notes associated with this work type.": "有工作记录仍与该工作类型关联",
   "This team can't be removed.": "该团队无法被删除",
-  "Total commission weight should not be negative.": "外佣合计不可以为负数",
-  "Total portal weight should not be negative.": "点佣合计不可以为负数",
   "User login does not exist.": "用户名不存在",
   "User role is required.": "请选择用户权限",
   "Work group name must be unique.": "工作类型名称不可重复",
