--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -25,6 +25,7 @@
   "Active": "激活",
   "Active Jobs": "待办工作",
   "Active Tasks": "待办任务",
+  "Active Users": "活跃用户",
   "ActiveMQ Host": "激活MQ主机",
   "ActiveMQ Password": "激活MQ密码",
   "ActiveMQ Port": "激活MQ port",
@@ -153,7 +154,7 @@
   "Fund Transfer": "转账",
   "Fund Transfer Report": "转账报告",
   "Fund Type": "分类",
-  "Generate Logins": "创建登录账号",
+  "Reset All Client Logins Password": "重设所有客户登录密码",
   "Head": "主管",
   "Home": "首页",
   "Host": "主机",
@@ -257,6 +258,7 @@
   "Online": "在线",
   "Open Time": "建仓时间",
   "Other": "其它",
+  "Override": "覆盖",
   "Parent": "上级代理",
   "Partner": "商业合作",
   "Password": "密码",
