--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -82,6 +82,7 @@
   "Clients": "客户",
   "Close Time": "平仓时间",
   "Closed Jobs": "结束待办事项",
+  "Collapse All": "折叠",
   "Comment": "注释",
   "Commission": "交易佣金",
   "Commission Definition Import": "交易佣金定义报告",
@@ -138,6 +139,7 @@
   "Event #": "活动#",
   "Exchange Rates": "汇率",
   "Ex-Client": "前客户",
+  "Expand": "展开",
   "Export": "导出",
   "File": "文件",
   "File(s)": "文件",
