--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -88,7 +88,7 @@
   "Commission Definition Import": "交易佣金定义报告",
   "Commission Definitions": "交易佣金定义",
   "Commission Report": "交易佣金报告",
-  "Commission Weight": "返佣金额",
+  "Commission Weight": "外佣金额",
   "Complete": "完成",
   "Complete Job": "完成事项",
   "Completed": "已完成",
@@ -103,14 +103,14 @@
   "Confirmed": "已确认",
   "Contains": "包含",
   "Country": "国家",
-  "Created": "已创建",
+  "Created": "创建日期",
   "Created By": "创建人",
   "Created Time": "创建时间",
   "Currency": "货币",
   "Currency Type": "货币类型",
-  "Current Agent Login": "目前代理登录号码",
-  "Current Group": "目前组别",
-  "Current Password": "旧密码",
+  "Current Agent Login": "当前代理登录账号",
+  "Current Group": "当前组别",
+  "Current Password": "当前密码",
   "Data is delayed by up to 10 minutes.": "数据可能有10分钟的延时",
   "Data is not available.": "数据不存在",
   "Date": "日期",
@@ -126,6 +126,7 @@
   "Details": "明细",
   "Document Type": "账户类型",
   "Domains": "域名",
+  "Domain Summary": "域信息汇总",
   "Download": "下载",
   "Due": "截止日期",
   "Due Date": "截止日期",
@@ -192,7 +193,7 @@
   "Level": "级别",
   "Levels": "级别",
   "Leverage": "杠杆",
-  "Link": "连结",
+  "Link": "链接",
   "Login": "登录",
   "Login Admin": "登录管理",
   "Login History": "登录历史",
@@ -268,6 +269,7 @@
   "PC Download": "PC下载",
   "Phone": "电话",
   "Platform": "平台",
+  "Performance": "业绩",
   "Portal Weight": "点差返佣",
   "Positions": "在场仓位",
   "Postcode": "邮编",
@@ -358,7 +360,7 @@
   "Unlinked Work Groups": "未关联工作组",
   "Update": "更新",
   "Update Leverage": "杠杆调整",
-  "Updated": "已更新",
+  "Updated": "更新",
   "Upload File": "上传文件",
   "Use Recent Account": "最近使用账户",
   "User": "用户",
